# dirtty

./: .gitignore  README.md  Taskfile.yaml  all_contents.txt  config.yaml  pyproject.toml
src/dirtty/: all_contents.txt  app.py  cli.py  config.py  directory_selector.py  helpers.py  main.py  themes.py
src/tui_chatbot/: main.py
themes/: darcula.yaml  onedark.yaml  solarized.yaml  synthwave.yaml  tokyo-night.yaml
