[tool.poetry]
name = "dirtty"
version = "0.1.0"
description = "Terminal-based AI assistant for querying your local document collections"
authors = ["Levi Smith <levi@fynx.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "*"
pypdf = "*"
langchain = "*"
ollama = "*"
pytermgui = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"